--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ecomm",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js"
@@ -12,5 +11,14 @@
   "dependencies": {
     "express": "^4.17.1",
     "nodemon": "^2.0.12"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kjottkake/JSecommerce.git"
+  },
+  "bugs": {
+    "url": "https://github.com/kjottkake/JSecommerce/issues"
+  },
+  "homepage": "https://github.com/kjottkake/JSecommerce#readme",
+  "description": ""
 }
